--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/core": "^10.4.15",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mx-ai-contract-sentinel-backend": "file:",
@@ -40,6 +41,7 @@
     "rimraf": "^5.0.0",
     "rxjs": "^7.8.1",
     "simple-statistics": "^7.8.3",
+    "typeorm": "^0.3.20",
     "ws": "^8.15.1"
   },
   "devDependencies": {
