--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@multiversx/sdk-nestjs-common": "^2.4.2",
     "@multiversx/sdk-nestjs-http": "^2.0.0",
     "@multiversx/sdk-nestjs-monitoring": "^2.0.0",
-    "@multiversx/sdk-network-providers": "^2.1.0",
+    "@multiversx/sdk-network-providers": "^2.9.3",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
@@ -36,13 +36,15 @@
     "class-validator": "^0.14.0",
     "mx-ai-contract-sentinel-backend": "file:",
     "node-cache": "^5.1.2",
+    "pg": "^8.13.3",
     "prom-client": "^14.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.0",
     "rxjs": "^7.8.1",
+    "simple-git": "^3.27.0",
     "simple-statistics": "^7.8.3",
     "typeorm": "^0.3.20",
-    "ws": "^8.15.1"
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -52,6 +54,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/ws": "^8.5.14",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.42.0",
